// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu renders 1`] = `
<div>
  <div
    class="wrapper"
  >
    <button
      aria-controls="123e4567-e89b-12d3-a456-426655440004"
      aria-expanded="false"
      aria-haspopup="true"
      class="button base hasIconAndLabel work secondary fullWidth"
      id="123e4567-e89b-12d3-a456-426655440003"
      type="button"
    >
      <svg
        class="Z6OfUI2sH34- TphtDHcwxDc-"
        data-testid="more"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class=""
          d="M4 12a2 2 0 1 1 4 0 2 2 0 0 1-4 0Zm6 0a2 2 0 1 1 4 0 2 2 0 0 1-4 0Zm8-2a2 2 0 1 0 0 4 2 2 0 0 0 0-4Z"
        />
      </svg>
      <span
        class="base extraBold base base"
      >
        More Actions
      </span>
    </button>
  </div>
</div>
`;

exports[`Menu with custom activator renders 1`] = `
<div>
  <div
    class="wrapper"
  >
    <button
      aria-controls="123e4567-e89b-12d3-a456-426655440040"
      aria-expanded="false"
      aria-haspopup="true"
      class="button base work primary"
      id="123e4567-e89b-12d3-a456-426655440039"
      type="button"
    >
      <span
        class="base extraBold base base"
      >
        Menu
      </span>
    </button>
  </div>
</div>
`;
